<resources>
    <string name="app_name">DS_LE</string>

    <string name="taskhub">
    TaskHub
    </string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>

    <string name="title">
    Title
    </string>
    <string name="open_navigation_menu">Open Navigation Menu</string>
    <string name="new_task">New Task</string>
    <string name="description">Description:</string>
    <string name="add">Add</string>
    <string name="deadline">Deadline:</string>
    <string name="done">Done</string>
    <string name="priority">Priority</string>
    <string name="date">Date</string>
    <string name="title_">Title:</string>
    <string name="title__">Title</string>
    <string name="description_">Description</string>
</resources>

